<resources>
    <string name="app_name">FixYou</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">라이브</string>
    <string name="tab_text_2">채팅</string>
    <string name="tab_text_3">VOD</string>
    <string name="tab_text_4">모임</string>
    <string name="tab_text_5">친구찾기</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- mask filter -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to sign up -->
    <string name="signup_email">이메일</string>
    <string name="signup_password">비밀번호</string>
    <string name="signup_name">이름</string>
    <string name="signup_birth">생년월일</string>
    <string name="signup_gender">성별</string>
    <string name="signup_phone">핸드폰번호</string>
    <string name="signup_agree">서비스 이용 약관, 개인정보 취급방침에 동의합니다</string>
    <string name="signup_next">다음</string>
    <string name="signup">가입하기</string>

    <!--dialog -->
    <string name="dialog_profile">프로필</string>
    <string name="dialog_gallery">갤러리</string>
    <string name="dialog_photo">카메라</string>
    <string name="dialog_search">길찾기</string>
    <string name="dialog_chat">채팅</string>
    <string name="dialog_video">영상통화</string>

    <!--custom button -->
    <string name="naver_login">네이버 아이디로 로그인하기</string>
    <string name="kakao_login">카카오톡 아이디로 로그인하기</string>
    <string name="google_login">구글 아이디로 로그인하기</string>
    <string name="email_login">이메일로 로그인하기</string>

    <!--cash -->
    <string name="cash_1">10개    ->    100원</string>
    <string name="cash_2">50개    ->    500원</string>
    <string name="cash_3">100개    ->    1100원</string>
    <string name="cash_4">300개    ->    3300원</string>
    <string name="cash_5">500개    ->    5500원</string>

    <!--meetup create -->
    <string name="meetup_create_button">계속</string>
    <string name="meetup_create_explanation">그룸의 이름을 정해주세요. 그리고 어떤 사람들을 모집하고, 어떤 활동을 할 것인지 작성해 주세요.</string>
    <string name="meetup_name">그룹 이름</string>
    <string name="meetup_explanation">설명</string>
    <string name="meetup_location">그룹 위치</string>
    <string name="meetup_interest">관심사</string>
    <string name="default_location">서울</string>
    <string name="default_interest">몇가지 주제 선택</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_test2">Sign in</string>
    <string name="title_activity_nvigation">NvigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--chat menu -->
    <string name="chat_translate">번역</string>
    <string name="chat_reading">읽기</string>
    <string name="chat_copy">복사</string>
    <string name="chat_bookmark">즐겨찾기</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>
