<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- menu group -->
    <group android:id="@+id/group_menu">
        <item android:id="@+id/menu_translate"
            android:title="@string/chat_translate"
            android:icon="@drawable/ic_whtie_translate"/>
        <item android:id="@+id/menu_reading"
            android:title="@string/chat_reading"
            android:icon="@drawable/ic_volume_up_white_24dp"/>
        <item android:id="@+id/menu_copy"
            android:title="@string/chat_copy"
            android:icon="@drawable/ic_content_copy_white_24dp"/>
        <item android:id="@+id/menu_bookmark"
            android:title="@string/chat_bookmark"
            android:icon="@drawable/ic_bookmark_border_white_24dp"/>
    </group>
</menu>