<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        tools:ignore="DisableBaselineAlignment,UnusedAttribute,UselessParent">
        <LinearLayout
            android:id="@+id/dialog_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/select_profile"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:padding="12dp"
                android:src="@drawable/user"
                />
            <TextView
                android:text="@string/dialog_profile"
                android:textColor="#838383"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dialog_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/select_search"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:padding="12dp"
                android:src="@drawable/map_search"
                />
            <TextView
                android:text="@string/dialog_search"
                android:textColor="#838383"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dialog_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/select_chat"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:padding="12dp"
                android:src="@drawable/chat"
                />
            <TextView
                android:text="@string/dialog_chat"
                android:textColor="#838383"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dialog_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/select_video"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:padding="12dp"
                android:src="@drawable/video_chat"
                />
            <TextView
                android:text="@string/dialog_video"
                android:textColor="#838383"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>